--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 2,
-  "name": "Name-Of-Your-XYZ-Project",
+  "name": "XYZ-Project",
   "description": "Awesome Chrome Extension of XYZ-Project",
   "version": "1.0",
   "homepage_url": "https://github.com/XYZ-Project",
