--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "manifest_version": 2,
+  "manifest_version": 3,
   "name": "XYZ-Project",
   "description": "Awesome Chrome Extension of XYZ-Project",
   "version": "1.0",
@@ -11,7 +11,7 @@
     "48": "images/icon48.png",
     "128": "images/icon128.png"
   },
-  "browser_action": {
+  "action": {
     "default_icon": {
       "16": "images/icon16.png",
       "19": "images/icon19.png",
@@ -20,8 +20,7 @@
     }
   },
   "background": {
-    "scripts": ["event.js"],
-    "persistent": false
+    "service_worker": "event.js",
   },
   "permissions": [
     "<all_urls>"
