--- a/manifest.json
+++ b/manifest.json
@@ -4,8 +4,8 @@
   "description": "Awesome Chrome Extension of XYZ-Project",
   "version": "1.0",
   "homepage_url": "https://github.com/XYZ-Project",
-  "author" : "Your Name",
-  "icons": { 
+  "author": "Your Name",
+  "icons": {
     "16": "images/icon16.png",
     "19": "images/icon19.png",
     "48": "images/icon48.png",
@@ -20,10 +20,10 @@
     }
   },
   "background": {
-    "service_worker": "event.js",
+    "service_worker": "event.js"
   },
   "permissions": [
-    "<all_urls>"
+    "tabs"
   ],
   "offline_enabled": false
 }
