--- a/manifest.json
+++ b/manifest.json
@@ -22,6 +22,11 @@
   "background": {
     "service_worker": "event.js"
   },
+  "permissions": [
+    "tabs",
+    "scripting",
+    "activeTab"
+  ],
   "host_permissions": [
     "<all_urls>"
   ],
